# hc_sr04_api

./: .gitignore  README.md
src/hc_sr04/: hc_sr04.c  hc_sr04.h  hc_sr04_hardware.h  hc_sr04_types.h
test/hc_sr04_tests/: CMakeLists.txt  test.cpp
test/hc_sr04_tests/mocks/: hc_sr04_hardware_mock.c  hc_sr04_hardware_mock.h
